--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@
         }
     article {
     	margin: 0px 350px;
-  		padding: 20px 30px;
-  		width: 30%;
+  		padding: 20px 50px;
   		background-color: #f1f1f1;
   		height: 300px;
-        padding-left: 350px;
         }
     section::after {
  		content: "";
@@ -91,7 +89,7 @@
 
 <section>
 	<nav>
-    	<ul style="list-style-type: none; padding: 0px 350px; margin-left: 0;">
+    	<ul style="list-style-type: none; margin-left: 0;">
           <li><a href="#Abstract">Abstract</a></li>
           <li><a href="#Introduction">Introduction</a></li>
           <li><a href="#Abstract">Abstract</a></li>
@@ -101,7 +99,7 @@
     </nav>
 
 	<article>
-	    <h2 id="Abstract" style="padding: 30px;">Abstract</h2>
+	    <h2 id="Abstract">Abstract</h2>
 	    <p>
         	Generative AI, incorporating the use of large language model-based chatbots such as ChatGPT and 
 			image generative technology such as DALL-E 2, is resurrecting the dead using digital traces left behind. 
