--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
 <html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <!Style for Navigation Bar>
 <style>
 	h1 {
-		content-left: 350px;
-        content-right: 350px;
+		content-left: 320px;
+        content-right: 320px;
 		}
 	body{
 		margin:0 ;
