--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
 		padding: 0;
 		}
 	body{
-		margin-top: 0;
-        margin-bottom: 0;
-        padding-left: 18%;
-        padding-right: 18%;
+		margin: 0;
         }
     .NavBar {
 		overflow: hidden;
@@ -30,8 +27,7 @@
 		}
     .nav {
   	 	float: left;
- 		width: ;
-        padding-top: 14px;
+ 		width: 140px;
     	}
     .nav a {
     	display:block;
@@ -51,7 +47,7 @@
 </style>
     
 <head>
-	<h1 style="margin: 0; font-size:30px; padding:35px 30px; border: 0.8px solid #D3D3D3"><b>Digital Necromancy: The dead are being brought back with AI. But are we delving too far?</b></h1>
+	<h1 style="margin: 0; font-size:30px; padding:35px 30px; border: 0.8px solid #D3D3D3"><b>Evolution of Message Queues and the architecture of Distributed Messaging</b></h1>
 </head>
 
 	<div style="margin: 0; font-size:14px; padding: 0.1px 60px; background-color: #F5F5F5">
@@ -68,16 +64,16 @@
     </div>
 
 	<div>
-    <img src="Whitewallpaper.jpg" alt="WhiteWallpaper" width="100%" height="0%">
+    <img src="Whitewallpaper.jpg" alt="WhiteWallpaper" width="100%" height="90px">
 	</div>
 
 	<div class="nav">
-    	<ul style="list-style-type: none; padding-left: 0; margin-left: 0;">
+    	<ul style="list-style-type: none; padding-left: 0; margin: 0;">
           <li><a href="#Abstract">Abstract</a></li>
           <li><a href="#Introduction">Introduction</a></li>
-          <li><a href="#Abstract">Abstract</a></li>
-          <li><a href="#Abstract">Abstract</a></li>
-          <li><a href="#Abstract">Abstract</a></li>
+          <li><a href="#Methods">Methods</a></li>
+          <li><a href="#Discussion">Discussion</a></li>
+          <li><a href="#Conclusion">Conclusion</a></li>
        	</ul>
     </div>
 
