--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		}
 	body{
 		margin: 0;
+		background-color: #F5F5F5;
         }
     .NavBar {
 		overflow: hidden;
@@ -28,6 +29,7 @@
     .nav {
   	 	float: left;
  		width: 140px;
+		background-color: white;
     	}
     .nav a {
     	display:block;
@@ -36,18 +38,20 @@
         padding: 30px 30px;
         }
     .nav a:hover {
-    	border-right: 4px solid black;
         color: black;
-        background-color: #E7E7E7;
+        background-color: #EBF2F7;
+        border-right: 4px solid black;
         }
     article {
-    	padding: 20px;
-        padding-left: 170px;
+    	padding: 8% 16%;
+        background-color: white;
+        width: 40%;
+        margin-left: 20%;
         }
 </style>
     
 <head>
-	<h1 style="margin: 0; font-size:30px; padding:35px 30px; border: 0.8px solid #D3D3D3"><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
+	<h1 style="background-color: white; margin: 0; font-size:30px; padding:4% 5%; border: 0.8px solid #D3D3D3"><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
 </head>
 
 	<div style="margin: 0; font-size:14px; padding: 0.1px 60px; background-color: #F5F5F5">
