--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </style>
     
 <head>
-	<h1 style="background-color: white; margin: 0; font-size:30px; padding:4% 5%; border: 0.8px solid #D3D3D3"><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
+	<h1 style="background-color: white; margin: 0; font-size:200%; padding:35px 30px; border: 0.8px solid #D3D3D3"><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
 </head>
 
 	<div style="margin: 0; font-size:14px; padding: 0.1px 60px; background-color: #F5F5F5">
