--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
 		}
     .nav {
   	 	float: left;
- 		width: 140px;
+ 		width: 200px;
 		background-color: white;
     	}
     .nav a {
     	display:block;
     	color: #ABB2B9;
+        font-size: 100%;
         text-decoration: none;
         padding: 30px 30px;
+        text-align: center;
         }
     .nav a:hover {
         color: black;
@@ -46,7 +48,7 @@
     	padding: 8% 16%;
         background-color: white;
         width: 40%;
-        margin-left: 20%;
+        margin-left: 19%;
         }
 </style>
     
