--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         border-right: 4px solid black;
         }
     article {
-    	padding: 8% 16%;
+    	padding: 4% 8%;
         background-color: white;
         width: 40%;
         margin-left: 19%;
@@ -86,8 +86,7 @@
 	<article>
 	    <h2 id="Abstract">Abstract</h2>
 	    <p>
-        	Generative AI, incorporating the use of large language model-based chatbots such as ChatGPT and 
-			image generative technology such as DALL-E 2, is resurrecting the dead using digital traces left behind. 
+        	Generative AI, incorporating the use of large language model-based chatbots such as ChatGPT and image generative technology such as DALL-E 2, is resurrecting the dead using digital traces left behind. 
         </p>
 	</article>
     
