--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
         }
     .NavBar {
 		overflow: hidden;
-        background-color: #7D7EE4;
+        background-color: white;
+        border-bottom: 2px solid #7D7EE4;
+        padding: 0% 14%;
         }  
     .NavBar a {
  		color: #f2f2f2;	
         font-size: 17px;
  		text-align: center;
         float: left;
- 		padding: 1% 6%;
+ 		padding: 1% 5%;
  		text-decoration: none;
         border:0.8px solid white;
         }
@@ -27,6 +29,7 @@
         color: black;
 		}
     .nav {
+		position: sticky;
   	 	float: left;
  		width: 200px;
 		background-color: white;
@@ -45,15 +48,15 @@
         border-right: 4px solid black;
         }
     article {
-    	padding: 4% 8%;
+    	padding: 8% 16%;
         background-color: white;
-        width: 60%;
-        margin-left: 16%;
+        width: 40%;
+        margin-left: 19%;
         }
 </style>
     
 <head>
-	<h1 style="background-color: white; margin: 0; font-size:200%; padding:45px 30px; border: 0.8px solid #D3D3D3"><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
+	<h1 style="background-color: white; margin: 0; font-size:200%; padding:35px 30px; border: 0.8px solid #D3D3D3"><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
 </head>
 
 	<div style="margin: 0; font-size:14px; padding: 0.1px 60px; background-color: #F5F5F5">
@@ -86,7 +89,30 @@
 	<article>
 	    <h2 id="Abstract">Abstract</h2>
 	    <p>
-        	Generative AI, incorporating the use of large language model-based chatbots such as ChatGPT and image generative technology such as DALL-E 2, is resurrecting the dead using digital traces left behind. 
+        	I checked in for the night at Out O The Way motel. What a bad choice that was. First I took a shower and a spider crawled out of the drain. Next, the towel rack fell down when I reached for the one small bath towel. This allowed the towel to fall halfway into the toilet. I tried to watch a movie, but the remote control was sticky and wouldn’t stop scrolling through the channels. I gave up for the night and crawled into bed. I stretched out my leg and felt something furry by my foot. Filled with fear, I reached down and to my surprise, I pulled out a raccoon skin pair of underwear. After my initial relief that it wasn’t alive, the image of a fat, ugly businessman wearing raccoon skin briefs filled my brain. I jumped out of the bed, threw my toothbrush into my bag, and sprinted towards my car.
+        </p>
+		
+		<h2 id="Introduction">Introduction</h2>
+	    <p>
+        	I checked in for the night at Out O The Way motel. What a bad choice that was. First I took a shower and a spider crawled out of the drain. Next, the towel rack fell down when I reached for the one small bath towel. This allowed the towel to fall halfway into the toilet. I tried to watch a movie, but the remote control was sticky and wouldn’t stop scrolling through the channels. I gave up for the night and crawled into bed. I stretched out my leg and felt something furry by my foot. Filled with fear, I reached down and to my surprise, I pulled out a raccoon skin pair of underwear. After my initial relief that it wasn’t alive, the image of a fat, ugly businessman wearing raccoon skin briefs filled my brain. I jumped out of the bed, threw my toothbrush into my bag, and sprinted towards my car.
+        </p>
+		
+		<h2 id="Methods">Methods</h2>
+	    <p>
+        	Generative AI, incorporating the use of large language model-based chatbots such as ChatGPT and 
+			image generative technology such as DALL-E 2, is resurrecting the dead using digital traces left behind. 
+        </p>
+		
+		<h2 id="Discussion">Discussion</h2>
+	    <p>
+        	Generative AI, incorporating the use of large language model-based chatbots such as ChatGPT and 
+			image generative technology such as DALL-E 2, is resurrecting the dead using digital traces left behind. 
+        </p>
+		
+		<h2 id="Conclusion">Conclusion</h2>
+	    <p>
+        	Generative AI, incorporating the use of large language model-based chatbots such as ChatGPT and 
+			image generative technology such as DALL-E 2, is resurrecting the dead using digital traces left behind. 
         </p>
 	</article>
     
