--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
         color: black;
 		}
     .nav {
+		margin: 0% 14%;
 		position: sticky;
   	 	float: left;
- 		width: 200px;
+ 		width: 180px;
 		background-color: white;
     	}
     .nav a {
@@ -56,10 +57,10 @@
 </style>
     
 <head>
-	<h1 style="background-color: white; margin: 0; font-size:200%; padding:35px 30px; border: 0.8px solid #D3D3D3"><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
+	<h1 style="background-color: white; margin: 0; font-size:200%; padding:0% 14%; border: 0.8px solid #D3D3D3"><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
 </head>
 
-	<div style="margin: 0; font-size:14px; padding: 0.1px 60px; background-color: #F5F5F5">
+	<div style="margin: 0; font-size:14px; padding: 0% 14%; background-color: #F5F5F5">
     	<p> 6653057, University of Surrey - Published: October 12, 2023 - Last Updated: October 13, 2023</p>
     </div>
     
