--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
 		}
 	body{
 		margin: 0;
-		background-color: #F5F5F5;
+		background-color: #EFF0F6;
         }
     .NavBar {
 		overflow: hidden;
         background-color: white;
-        border-bottom: 2px solid #7D7EE4;
-        padding: 0% 14%;
+        padding-left: 10%
         }  
     .NavBar a {
  		color: #f2f2f2;	
         font-size: 17px;
  		text-align: center;
         float: left;
- 		padding: 1% 5%;
+ 		padding: 14px 6%;
  		text-decoration: none;
         border:0.8px solid white;
         }
@@ -29,18 +28,18 @@
         color: black;
 		}
     .nav {
-		margin: 0% 14%;
 		position: sticky;
   	 	float: left;
- 		width: 180px;
+ 		width: 13%;
 		background-color: white;
+        margin-left: 10%;
     	}
     .nav a {
     	display:block;
     	color: #ABB2B9;
         font-size: 100%;
         text-decoration: none;
-        padding: 30px 30px;
+        padding: 25px 10%;
         text-align: center;
         }
     .nav a:hover {
@@ -49,18 +48,19 @@
         border-right: 4px solid black;
         }
     article {
-    	padding: 8% 16%;
+    	position: center;
+    	padding: 6% 10%;
         background-color: white;
         width: 40%;
-        margin-left: 19%;
+        margin-left: 26%;
         }
 </style>
     
 <head>
-	<h1 style="background-color: white; margin: 0; font-size:200%; padding:35px 14%; border: 0.8px solid #D3D3D3"><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
+	<h1 style="background-color: white; margin: 0; font-size:200%; padding:35px 10%; border: 0.8px solid #D3D3D3"><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
 </head>
 
-	<div style="margin: 0; font-size:14px; padding: 0% 14%; background-color: #F5F5F5">
+	<div style="margin: 0; font-size:14px; padding: 0.1px 10%; background-color: #EFF0F6">
     	<p> 6653057, University of Surrey - Published: October 12, 2023 - Last Updated: October 13, 2023</p>
     </div>
     
