--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         font-size: 17px;
  		text-align: center;
         float: left;
- 		padding: 14px 6%;
+ 		padding: 16px 5%;
  		text-decoration: none;
         border:0.8px solid white;
         }
@@ -49,10 +49,10 @@
         }
     article {
     	position: center;
-    	padding: 6% 10%;
+    	padding: 6% 9%;
         background-color: white;
         width: 40%;
-        margin-left: 26%;
+        margin-left: 25%;
         }
 </style>
     
@@ -65,7 +65,7 @@
     </div>
     
 <body>
-    <div class="NavBar">
+    <div style="background-color: #7D7EE4; margin: 0px 10%;" class="NavBar">
 	    <a class="#Article" style="background-color: #28294D;" href="#home">Article</a>
 	    <a style="background-color: #36376E;" href="#Authors">Authors</a>
 	    <a style="background-color: #414286;" href="#Metrics">Metrics</a>
@@ -74,7 +74,7 @@
     </div>
 
 	<div>
-    <img src="Whitewallpaper.jpg" alt="WhiteWallpaper" width="100%" height="90px">
+    <img src="Whitewallpaper.jpg" alt="WhiteWallpaper" width="89.46%" height="90px" style="margin: 0px 10%;">
 	</div>
 
 	<div class="nav">
