--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
         }
     .NavBar {
 		overflow: hidden;
-        background-color: white;
-        padding-left: 10%
+        background: linear-gradient(
+    	to right, 
+        black 0%, 
+        black 50%, 
+        #7D7EE4 50%, 
+        #7D7EE4 100%);
+        padding-left: 10%;
         }  
     .NavBar a {
  		color: #f2f2f2;	
