--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         #7D7EE4 50%, 
         #7D7EE4 100%);
         padding-left: 10%;
-        Max-height: 7%;
+        Max-height: 54px;
         }  
     .NavBar a {
  		color: #f2f2f2;	
