--- a/index.html
+++ b/index.html
@@ -7,25 +7,19 @@
 		}
 	body{
 		margin: 0;
-		background-color: #EFF0F6;
+		background-color: #F5F5F5;
         }
     .NavBar {
+    	margin: 0px 8%;
 		overflow: hidden;
-        background: linear-gradient(
-    	to right, 
-        black 0%, 
-        black 50%, 
-        #7D7EE4 50%, 
-        #7D7EE4 100%);
-        padding-left: 10%;
-        Max-height: 54px;
+        background-color: #7D7EE4;
         }  
     .NavBar a {
  		color: #f2f2f2;	
         font-size: 17px;
  		text-align: center;
         float: left;
- 		padding: 16px 5%;
+ 		padding: 1% 6%;
  		text-decoration: none;
         border:0.8px solid white;
         }
@@ -34,18 +28,18 @@
         color: black;
 		}
     .nav {
+    	margin-left: 8%;
 		position: sticky;
   	 	float: left;
- 		width: 13%;
+ 		width: 200px;
 		background-color: white;
-        margin-left: 10%;
     	}
     .nav a {
     	display:block;
     	color: #ABB2B9;
         font-size: 100%;
         text-decoration: none;
-        padding: 25px 10%;
+        padding: 30px 30px;
         text-align: center;
         }
     .nav a:hover {
@@ -54,11 +48,10 @@
         border-right: 4px solid black;
         }
     article {
-    	position: center;
-    	padding: 6% 12.5%;
+    	padding: 6% 12%;
         background-color: white;
         width: 40%;
-        margin-left: 25%;
+        margin-left: 26%;
         }
 </style>
     
@@ -66,12 +59,12 @@
 	<h1 style="background-color: white; margin: 0; font-size:200%; padding:35px 10%; border: 0.8px solid #D3D3D3"><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
 </head>
 
-	<div style="margin: 0; font-size:14px; padding: 0.1px 10%; background-color: #EFF0F6">
+	<div style="margin: 0; font-size:14px; padding: 0.1px 10%; background-color: #F5F5F5">
     	<p> 6653057, University of Surrey - Published: October 12, 2023 - Last Updated: October 13, 2023</p>
     </div>
     
 <body>
-    <div style="background-color: #7D7EE4; margin: 0px 10%;" class="NavBar">
+    <div class="NavBar">
 	    <a class="#Article" style="background-color: #28294D;" href="#home">Article</a>
 	    <a style="background-color: #36376E;" href="#Authors">Authors</a>
 	    <a style="background-color: #414286;" href="#Metrics">Metrics</a>
@@ -80,11 +73,11 @@
     </div>
 
 	<div>
-    <img src="Whitewallpaper.jpg" alt="WhiteWallpaper" width="89.46%" height="90px" style="margin: 0px 10%;">
+    <img src="Whitewallpaper.jpg" alt="WhiteWallpaper" width="91.66%" height="90px" style="margin: 0 8%">
 	</div>
 
 	<div class="nav">
-    	<ul style="list-style-type: none; padding-left: 0; margin: 0;">
+    	<ul style="list-style-type: none; padding-left: 0; margin: 0%;">
           <li><a href="#Abstract">Abstract</a></li>
           <li><a href="#Introduction">Introduction</a></li>
           <li><a href="#Methods">Methods</a></li>
