--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <!Style for Navigation Bar>
 <style>
@@ -63,7 +64,7 @@
     	<p> 6653057, University of Surrey - Published: October 12, 2023 - Last Updated: October 13, 2023</p>
     </div>
     
-<body>
+<body background="TechBackground.jpg">
     <div class="NavBar">
 	    <a class="#Article" style="background-color: #28294D;" href="#home">Article</a>
 	    <a style="background-color: #36376E;" href="#Authors">Authors</a>
