--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		background-color: #F5F5F5;
         }
     .NavBar {
-    	margin: 0px 8%;
+    	margin: 0px 9%;
 		overflow: hidden;
         background-color: #7D7EE4;
         }  
@@ -29,7 +29,7 @@
         color: black;
 		}
     .nav {
-    	margin-left: 8%;
+    	margin-left: 9%;
 		position: sticky;
   	 	float: left;
  		width: 200px;
@@ -52,7 +52,7 @@
     	padding: 6% 12%;
         background-color: white;
         width: 40%;
-        margin-left: 26%;
+        margin-left: 25%;
         }
 </style>
     
@@ -60,7 +60,7 @@
 	<h1 style="background-color: white; margin: 0; font-size:200%; padding:35px 10%; border: 0.8px solid #D3D3D3"><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
 </head>
 
-	<div style="margin: 0; font-size:14px; padding: 0.1px 10%; background-color: #F5F5F5">
+	<div style="margin: 0 9%; font-size:14px; padding: 0.1px 10%; background-color: #F5F5F5">
     	<p> 6653057, University of Surrey - Published: October 12, 2023 - Last Updated: October 13, 2023</p>
     </div>
     
