--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <!Style for Navigation Bar>
 <style>
 	h1 {
-		margin:0;
-		padding: 0;
+		margin:0 9%;
+		font-size:200%;
+		padding:38px 10%;
+		background-color: white;
+		border: 0.8px solid #D3D3D3
 		}
 	body{
 		margin: 0;
@@ -57,7 +60,7 @@
 </style>
     
 <head>
-	<h1 style="background-color: white; margin: 0; font-size:200%; padding:35px 10%; border: 0.8px solid #D3D3D3"><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
+	<h1><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
 </head>
 
 	<div style="margin: 0 9%; font-size:14px; padding: 0.1px 10%; background-color: #F5F5F5">
