--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         color: black;
 		}
     .nav {
-    	margin-left: 9%;
+    	margin-left: 11%;
 		position: sticky;
   	 	float: left;
  		width: 200px;
@@ -52,7 +52,7 @@
         border-right: 4px solid black;
         }
     article {
-    	padding: 6% 12%;
+    	padding: 4% 9%;
         background-color: white;
         width: 40%;
         margin-left: 25%;
@@ -76,9 +76,7 @@
 	    <a style="background-color: #5C5DBB;" href="#Media Coverage">Media Coverage</a>
     </div>
 
-	<div>
-    <img src="Whitewallpaper.jpg" alt="WhiteWallpaper" width="91.66%" height="90px" style="margin: 0 8%">
-	</div>
+<div style="margin-top: 20px;">
 
 	<div class="nav">
     	<ul style="list-style-type: none; padding-left: 0; margin: 0%;">
@@ -119,7 +117,8 @@
 			image generative technology such as DALL-E 2, is resurrecting the dead using digital traces left behind. 
         </p>
 	</article>
-    
+</div>
+
 <! For intro
 	Generative AI gained popularity with the developement of generative 
 	adversarial networks (GANs), a deep learning architecture with the ability to create 
