--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	h1 {
 		margin:0 9%;
 		font-size:200%;
-		padding:38px 6%;
+		padding:30px 6%;
 		background-color: white;
 		border: 0.8px solid #D3D3D3
 		}
@@ -20,7 +20,7 @@
         }  
     .NavBar a {
  		color: #f2f2f2;	
-        font-size: 17px;
+        font-size: 15px;
  		text-align: center;
         float: left;
  		padding: 1% 6%;
@@ -40,7 +40,7 @@
     	}
     .nav a {
     	display:block;
-    	color: #ABB2B9;
+    	color: #666666;
         font-size: 100%;
         text-decoration: none;
         padding: 30px 30px;
@@ -63,7 +63,7 @@
 	<h1><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
 </head>
 
-	<div style="margin: 0 9%; font-size:14px; padding: 0.1px 6%; background-color: #F5F5F5">
+	<div style="margin: 0 9%; font-size:13px; padding: 0.1px 6%; background-color: #F5F5F5">
     	<p> 6653057, University of Surrey - Published: October 12, 2023 - Last Updated: October 13, 2023</p>
     </div>
     
