--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         border-right: 4px solid black;
         }
     article {
-    	padding: 4% 9%;
+    	padding: 2% 9%;
         background-color: white;
         width: 40%;
         margin-left: 25%;
@@ -60,7 +60,7 @@
 </style>
     
 <head>
-	<h1><b>Evolution of Message Queues: The architecture of Distributed Messaging</b></h1>
+	<h1><b>Quantum Minds</b></h1>
 </head>
 
 	<div style="margin: 0 9%; font-size:13px; padding: 0.1px 6%; background-color: #F5F5F5">
@@ -89,6 +89,8 @@
     </div>
 
 	<article>
+		<h2 style="font-size: 30px;">Evolution of Message Queues: The architecture of Distributed Messaging</h2>
+		<br>
 	    <h2 id="Abstract">Abstract</h2>
 	    <p>
         	I checked in for the night at Out O The Way motel. What a bad choice that was. First I took a shower and a spider crawled out of the drain. Next, the towel rack fell down when I reached for the one small bath towel. This allowed the towel to fall halfway into the toilet. I tried to watch a movie, but the remote control was sticky and wouldn’t stop scrolling through the channels. I gave up for the night and crawled into bed. I stretched out my leg and felt something furry by my foot. Filled with fear, I reached down and to my surprise, I pulled out a raccoon skin pair of underwear. After my initial relief that it wasn’t alive, the image of a fat, ugly businessman wearing raccoon skin briefs filled my brain. I jumped out of the bed, threw my toothbrush into my bag, and sprinted towards my car.
