--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     .NavBar {
     	margin: 0 9%;
 		overflow: hidden;
-        background-color: #7D7EE4;
+        background-color: #9DA0FF;
         }  
     .NavBar a {
  		color: #f2f2f2;	
@@ -69,11 +69,13 @@
     
 <body background="TechBackground.jpg">
     <div class="NavBar">
-	    <a class="#Article" style="background-color: #28294D;" href="#home">Article</a>
-	    <a style="background-color: #36376E;" href="#Authors">Authors</a>
-	    <a style="background-color: #414286;" href="#Metrics">Metrics</a>
-	    <a style="background-color: #4D4E9F;" href="#Comments">Comments</a>
-	    <a style="background-color: #5C5DBB;" href="#Media Coverage">Media Coverage</a>
+	    <a class="#Article" style="background-color: #28294D;" href="#Technology">Technology</a>
+	    <a style="background-color: #36376E;" href="#Health">Health</a>
+	    <a style="background-color: #414286;" href="#Enviroment">Enviroment</a>
+	    <a style="background-color: #4D4E9F;" href="#Education">Education</a>
+	    <a style="background-color: #5C5DBB;" href="#Politics">Politics</a>
+		<a style="background-color: #6769D5;" href="#Economy">Economy</a>
+		<a style="background-color: #8386F9;" href="#Art/Culture">Art/Culture</a>
     </div>
 
 <div style="margin-top: 20px;">
