--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 		background-color: white;
 		border: 0.8px solid #D3D3D3
 		}
+	h1::first-letter {
+		font-size:220%;
+		color: #6769D5;
+	}
 	body{
 		margin: 0;
 		background-color: #F5F5F5;
